--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,7 @@ werkzeug==2.3.7
 # Database
 psycopg2-binary
 
-# Cache
-redis==5.0.0
-
+# Cache (removed external cache)
 # AWS S3
 boto3==1.28.40
 botocore==1.31.40
