--- a/k8s/eks-manifests-image.yaml
+++ b/k8s/eks-manifests-image.yaml
@@ -19,8 +19,15 @@ data:
           index index.html;
           try_files $uri $uri/ /index.html;
         }
-        # API direct
-        location /api/ {
+        # Static files (CSS, JS, etc.) under subpath
+        location /annot-image/static/ {
+          alias /usr/share/nginx/html/static/;
+          expires 1y;
+          add_header Cache-Control "public, immutable";
+        }
+        # Versioned API for image tool
+        location /api/v1/annot-image/ {
+          rewrite ^/api/v1/annot-image/(.*)$ /api/$1 break;
           proxy_pass http://flask_app;
           proxy_set_header Host $host;
           proxy_set_header X-Real-IP $remote_addr;
@@ -30,19 +37,7 @@ data:
           proxy_read_timeout 300s;
           proxy_connect_timeout 75s;
         }
-        # API under subpath /annot-image/api -> /api
-        location /annot-image/api/ {
-          rewrite ^/annot-image/api/(.*)$ /api/$1 break;
-          proxy_pass http://flask_app;
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto $scheme;
-          client_max_body_size 50M;
-          proxy_read_timeout 300s;
-          proxy_connect_timeout 75s;
-        }
-        location /health { proxy_pass http://flask_app; }
+        location /health { proxy_pass http://flask_app/api/health; }
       }
     }
 ---
@@ -108,23 +103,27 @@ spec:
               value: "true"  # 设为 "false" 可禁用向量嵌入功能
           resources:
             requests:
-              memory: "1Gi"
-              cpu: "300m"
+              memory: "2Gi"      # 增加至 2Gi 确保模型能正常加载
+              cpu: "500m"        # 适当增加 CPU 请求
             limits:
-              memory: "2Gi"
-              cpu: "1000m"
+              memory: "4Gi"      # 增加至 4Gi 给推理留足空间
+              cpu: "1500m"       # 增加 CPU 限制
           livenessProbe:
             httpGet:
               path: /api/health
               port: 5001
-            initialDelaySeconds: 60
+            initialDelaySeconds: 120   # 增加至 120s，给模型加载充足时间
             periodSeconds: 30
+            timeoutSeconds: 10         # 增加超时时间
+            failureThreshold: 5        # 增加失败阈值
           readinessProbe:
             httpGet:
               path: /api/health
               port: 5001
-            initialDelaySeconds: 10
-            periodSeconds: 5
+            initialDelaySeconds: 30    # 增加至 30s
+            periodSeconds: 10          # 增加检查间隔
+            timeoutSeconds: 5          # 增加超时时间
+            failureThreshold: 3        # 增加失败阈值
         - name: nginx
           image: 686255979277.dkr.ecr.us-west-2.amazonaws.com/internal/annot-image-frontend:latest
           ports:
