feat: add k8s deployment (#6)
* WIP: remove redis and change db props

* add k8s deployment file

* test build and pushh

* add k8s deploy

---------

Co-authored-by: Tianhe Wang <tianhewang@Tianhes-Mac-mini.local>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,34 @@
 version: "3.8"
 
 services:
-  # Redis缓存服务
-  redis:
-    image: redis:7-alpine
-    container_name: viba_redis
-    ports:
-      - "6379:6379"
-    networks:
-      - viba_network
-    volumes:
-      - redis_data:/data
-
   # Flask应用
   app:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.backend
     container_name: viba_app
     ports:
-      - "5000:5000"
+      - "5001:5001"
     environment:
       # 数据库配置 - 连接到已存在的数据库
-      POSTGRES_HOST: ${POSTGRES_HOST:-your_database_host}
-      POSTGRES_PORT: ${POSTGRES_PORT:-5432}
-      POSTGRES_DB: ${POSTGRES_DB:-viba}
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      DB_HOST: ${DB_HOST:-your_database_host}
+      DB_PORT: ${DB_PORT:-5432}
+      DB_NAME: ${DB_NAME:-viba}
+      DB_USER: ${DB_USER:-postgres}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_AUTH_MODE: ${DB_AUTH_MODE:-password}
+      DB_SSLMODE: ${DB_SSLMODE:-prefer}
 
-      # Redis配置
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      REDIS_DB: 0
-
-      # AWS S3配置
+      # AWS 配置
+      AWS_REGION: ${AWS_REGION:-us-west-2}
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-      S3_BUCKET: ${S3_BUCKET:-viba-images}
-      S3_REGION: ${S3_REGION:-us-east-1}
+      S3_BUCKET_NAME: ${S3_BUCKET_NAME:-viba-images}
+      S3_REGION: ${S3_REGION:-us-west-2}
+      S3_PREFIX: ${S3_PREFIX:-viba-image-annotation/}
 
       # 嵌入模型配置
       EMBEDDING_MODEL: ${EMBEDDING_MODEL:-sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2}
-    depends_on:
-      - redis
     volumes:
       - ./temp_uploads:/app/temp_uploads
       - ./logs:/app/logs
@@ -48,8 +36,19 @@ services:
       - viba_network
     restart: unless-stopped
 
-volumes:
-  redis_data:
+  # Nginx 前端
+  frontend:
+    build:
+      context: .
+      dockerfile: Dockerfile.frontend.dev
+    container_name: viba_frontend
+    ports:
+      - "5000:80"
+    depends_on:
+      - app
+    networks:
+      - viba_network
+    restart: unless-stopped
 
 networks:
   viba_network:
